--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             document.getElementById("messages").innerHTML += `<p><b>You:</b> ${userInput}</p>`;
             document.getElementById("userInput").value = "";
 
-            const response = await fetch("http://localhost:5000/chat", {
+            const response = await fetch("https://healthcare-chatbot-69ix.onrender.com/chat", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ message: userInput })
