updated Interface and mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <!-- Link to External CSS -->
     <link rel="stylesheet" href="styles.css">
+    
     <script defer src="script.js"></script>
 
 </head>
@@ -18,7 +19,7 @@
     </div>
 
     <!-- Chatbot Title -->
-    <h2>Healthcare Virtual Assistant</h2>
+    <h2>Healthcare <span class="res">virtual Assistant</span></h2>
 
     <!-- Chatbox -->
     <div id="chatbox">
