--- a/index.html
+++ b/index.html
@@ -24,11 +24,19 @@
     <!-- Chatbox -->
     <div id="chatbox">
         <div id="messages">
-            <img id="chatGif" src="images/Animation - 1740068817891.gif" alt="Chat Animation" class="chat-gif">
+            <img id="chatGif" src="images/Untitled design (3).png" alt="Chat Animation" class="chat-gif">
         </div>
         <input type="text" id="userInput" placeholder="Ask me anything...">
         <button id="sendButton">Send</button>  <!-- FIXED: Added ID -->
     </div>
+    <!-- YouTube Background Video -->
+<!-- Full-Screen Background Video -->
+<video id="bg-video" autoplay muted loop>
+    <source src="images/bg-ani.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
+
+
 
     <!-- JavaScript -->
     
